# learning_from_relative_feedback_code

./: .gitignore  .gitmodules  README.md  requirements.txt
configs/: ddqn_advice.yaml  ddqn_baseline.yaml  ddqn_heuristic.yaml
submodules/cuelearner/: pyproject.toml
submodules/cuelearner/cuelearner/active_learning/: utils.py
submodules/cuelearner/cuelearner/active_learning/policies/: __init__.py  advice_cloner.py  behavior_cloner.py  ddqn.py  ensemble.py  td3.py
submodules/cuelearner/cuelearner/active_learning/trainers/: baseline_trainer.py  dagger_prior_billiards.py  dagger_prior_nav.py  exploration_advice_billiards.py  exploration_advice_nav.py  exploration_tamer_nav.py  improvement_advice.py  improvement_advice_nav.py  improvement_residual.py  residual_rl.py  tamer_prior_billiards.py  tamer_prior_nav.py
submodules/cuelearner/cuelearner/active_learning/trainers/ablations/: improvement_residual.py
submodules/cuelearner/cuelearner/active_learning/trainers/implementation_archive/: 2024_07_20_exploration_advice_navigation.py  2024_08_10_exploration_advice_navigation.py  2024_08_27_exploration_advice_nav_dagger_everything_integrated.py  2024_08_27_exploration_advice_nav_prior_bc_everything_integrated.py  2024_09_24_exploration_expert_nav.py  2024_10_12_exploration_advice_billiards_step_advice.py  improvement_advice_nav_w_feature_vector.py  improvement_advice_nav_w_uncertainty_measure.py
submodules/cuelearner/cuelearner/common/: advice_agents.py  data_structures.py  models.py  players.py  utils.py
tools/rl/: train.py  train_dagger_exploration.py  (+5 more)
(+116 files in other folders)
